--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body {
 
     <h1>Contact Customer Support</h1> 
     <form>
-        <div class="body">
+        <div class="box">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
