--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
     </div>
     </div>
 
-  <div class="rectangle">
+  <div class="box">
     <h2><B>Contact Us!</B></h2>
     <br>
     <div class = "second-box">
